dark mode and show js fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -10,6 +10,7 @@
     --nav-link-color: #8fc3cb;
     --nav-hover-link-color: #0f0636;
     --nav-hover-background-color: #dce1e9;
+    --nav-link-color-2: #004466;
 }
 
 body {
@@ -61,6 +62,14 @@ ul.menu {
     padding-left: 0;
 }
 
+li.a {
+    color:var(--secondary-color);
+}
+
+h1 {
+    color: var(--accent1-color);
+}
+
 h2 {
     display: grid;
     font-size: 1.49em;
@@ -108,6 +117,7 @@ footer {
     justify-content: center;
     background-color: var(--secondary-color);
     text-align: center;
+    color: var(--accent1-color);
 }
 
 footer img {
@@ -146,8 +156,9 @@ p#second {
 }
 
 a#menu.show {
-    background-color: var(--primary-color);
+    background-color: var(--nav-link-color-2);
 }
+
 #menu.show::before {
     content: "❌";
     background-color: var(--secondary-color);
@@ -176,6 +187,10 @@ a#menu.show {
       color: var(--nav-hover-background-color);
     }
 
+div a {
+    color: var(--nav-link-color-2);
+}
+
 .navigation a:hover,
 .navigation a:active {
     color: var(--nav-hover-link-color);
@@ -192,4 +207,5 @@ a#menu.show {
 #mode {
 	font-size: 2.3rem;
 	cursor: pointer;
+    text-align: right;
 }
